--- a/android-kotlin/feature_login/src/main/res/layout/activity_register.xml
+++ b/android-kotlin/feature_login/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/login_form_bg"
+            android:background="#80000000"
             android:adjustViewBounds="true" />
 
         <!-- Registration form -->
